Añadido firewall y arreglos

--- a/iptables/lab.conf
+++ b/iptables/lab.conf
@@ -2,17 +2,20 @@ LAB_DESCRIPTION="Curso iptables"
 LAB_VERSION=1.0
 LAB_AUTHOR="Jose Maria Riol Sanchez"
 LAB_EMAIL=josemaria.riol.sanchez@gmail.com
-LAB_WEB=https://github.com/jose-mrs
+LAB_WEB=https://github.com/joserisa
 
 pc[0]=A
 swlocal[1]=A
 swlocal[0]=B
 
-router[0]=B
-router[1]=C
-router[bridged]=true
+fw[0]=B
+fw[1]=C
+fw[2]=D
 
 swdmz[0]=C
 swdmz[1]=E
 
 server[0]=E
+
+router[0]=D
+router[bridged]=true
